fixed text alignment for screen sizes 360 by 740

--- a/src/index.css
+++ b/src/index.css
@@ -736,10 +736,18 @@ label {
 
   }
 
+  .contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 20px;
+  
+  }
+
   .contact-info li {
     font-size: 25px;
     justify-content: space-between;
-
 
   }
 
